--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -255,7 +255,7 @@
                     <td>[{{ row.courseHour }}]</td>
                     <td>
                         {% if row.department %}
-                            {{ row.department.departmentName }} ({{ row.courseDepartment }})
+                            [{{ row.courseDepartment }}]
                         {% else %}
                             <span style="color:red;">[ERROR]</span>
                         {% endif %}
