--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -210,8 +210,8 @@
                 <i class="fas fa-check"></i> Update Course
             </button>
             <button type="submit" name="action" value="delete" style="background-color: #f0a5a0;" 
-                    onclick="return confirm('Are you sure to delete this course?')">
-                <i class="fas fa-trash"></i> Delete Course
+                    onclick="return confirm('Are you sure to deactivated this course?')">
+                <i class="fas fa-trash"></i> Deactivated Course
             </button>
         </div>
     </div>
