--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -206,10 +206,10 @@
         <br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" class="alert alert-success">
+            <button type="submit" name="action" value="update" style="background-color: #d4edda; color: #155724;">
                 <i class="fas fa-check"></i> Update Course
             </button>
-            <button type="submit" name="action" value="delete" class="alert alert-error">
+            <button type="submit" name="action" value="delete" style="background-color: #f8d7da; color: #721c24;">
                     onclick="return confirm('Are you sure to deactivated this course?')">
                 <i class="fas fa-trash"></i> Deactivated Course
             </button>
