--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -208,7 +208,7 @@
             <button type="submit" name="action" value="update" style="background-color: #d4edda; color: #155724;">
                 <i class="fas fa-check"></i> Update Course
             </button>
-            <button type="submit" name="action" value="delete" style="background-color: #f8d7da; color: #721c24;"
+            <button type="submit" name="action" value="delete" class="alert alert-error"
                     onclick="return confirm('Are you sure to deactivated this course?')">
                 <i class="fas fa-trash"></i> Deactivated Course
             </button>
