--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -205,10 +205,10 @@
         <input type="hidden" name="form_type" value="edit">
         <br><br>
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" style="background-color: #7DF090;">
+            <button type="submit" name="action" value="update" style="background-color: #d4edda; color: #155724;">
                 <i class="fas fa-check"></i> Update Staff
             </button>
-            <button type="submit" name="action" value="delete" style="background-color: #f0a5a0;" 
+            <button type="submit" name="action" value="delete" style="background-color: #f8d7da; color: #721c24;" 
                     onclick="return confirm('Are you sure to delete this staff?')">
                 <i class="fas fa-trash"></i> Delete Staff
             </button>
