--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -151,10 +151,10 @@
         <br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" style="background-color: #7DF090;">
+            <button type="submit" name="action" value="update" style="background-color: #d4edda; color: #155724;">
                 <i class="fas fa-check"></i> Update Timetable Relationship
             </button> 
-            <button type="submit" name="action" value="delete" style="background-color: #f0a5a0;" 
+            <button type="submit" name="action" value="delete" style="background-color: #f8d7da; color: #721c24;" 
                     onclick="return confirm('Are you sure to delete this timetable relationship?')">
                 <i class="fas fa-trash"></i> Delete Timetable Relationship
             </button>
