--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -117,7 +117,8 @@
                         <td>
                             ID     : {{ att.invigilator.userId }} <br>
                             Name   : {{ att.invigilator.userName }} <br>
-                            Contact: {{ att.invigilator.userContact }}
+                            Contact: {{ att.invigilator.userContact }} <br>
+                            Gender : {{ att.invigilator.userGender }}
                         </td>
                         
                         <!-- Check-in Time -->
