--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="dashboard-frame">
                     <h3>Incomplete Exams</h3>
-                    <p class="dashboard-text" style="color:red;">{{ total_exam - complete_exam - unassigned_exam }}</p>
+                    <p class="dashboard-text" style="color:red;">{{ incomplete_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Unassigned Exams</h3>
