--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -286,8 +286,8 @@
 
                     <!-- Invigilation -->
                     <td>
-                        Cumulative: {{ att.userCumulativeHours }} hrs <br>
-                        Pending: {{ att.userPendingCumulativeHours }} hrs
+                        Cumulative: {{ row.userCumulativeHours }} hrs <br>
+                        Pending: {{ row.userPendingCumulativeHours }} hrs
                     </td>
                 </tr>
 
