--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -221,7 +221,7 @@
 {% block content %}
 <div class="menu-section">
     <h2>List of Staff</h2>
-    <div style="margin-top: 15px; text-align: center;">
+    <div style="text-align: center;">
         <button id="prevBtn">Previous</button>
         <span id="pageInfo"></span>
         <button id="nextBtn">Next</button>
