--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -16,7 +16,7 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame pie">
+                <div class="dashboard-frame">
                     <h3>Total Departments</h3>
                     <p class="dashboard-text">{{ total_department }}</p>
                 </div>
@@ -25,16 +25,17 @@
                     <p class="dashboard-text" style="color:green;">{{ total_hop }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Departments with HOP</h3>
-                    <p class="dashboard-text" style="color:green;">{{ department_with_hop }}</p>
+                    <h3>Total of Dean/HOS</h3>
+                    <p class="dashboard-text" style="color:green;">{{ total_dean }}</p>
                 </div>
+                <!--
                 <div class="dashboard-frame">
                     <h3>Departments without HOP</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_department - department_with_hop }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total of Dean</h3>
-                    <p class="dashboard-text" style="color:green;">{{ total_dean }}</p>
+                    <h3>Departments with HOP</h3>
+                    <p class="dashboard-text" style="color:green;">{{ department_with_hop }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Departments with Dean</h3>
@@ -44,6 +45,7 @@
                     <h3>Departments without Dean</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_department - department_with_dean }}</p>
                 </div>
+                -->
             </div>
         </div>
     </div>
