--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -25,7 +25,7 @@
                     <p class="dashboard-text" style="color:green;">{{ total_invigilator }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Invigilators In Progress</h3>
+                    <h3>Exam In Going</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_inProgress   }}</p>
                 </div>
                 <div class="dashboard-frame">
