--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -155,8 +155,8 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Venue Number</th>
-                    <th>Venue Floor</th>
+                    <th>Venue</th>
+                    <th>Floor</th>
                     <th>Venue Capacity</th>
                     <th>Venue Status</th>
                 </tr>
