--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -156,7 +156,7 @@
                 <tr>
                     <th>No</th>
                     <th>Venue</th>
-                    <th>Floor</th>
+                    <th>Level</th>
                     <th>Venue Capacity</th>
                     <th>Venue Status</th>
                 </tr>
