--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -21,11 +21,11 @@
                     <p class="dashboard-text">{{ total_department }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total of HOP</h3>
+                    <h3>Total HOP</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_hop }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total of Dean/HOS</h3>
+                    <h3>Total Dean/HOS</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_dean }}</p>
                 </div>
                 <!--
