--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -24,7 +24,7 @@
                     <p class="dashboard-text" style="color:green;">{{ complete_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Incomplete Exams</h3>
+                    <h3>Erros in Timetable</h3>
                     <p class="dashboard-text" style="color:red;">{{ incomplete_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
